# gateways-benchmark

./: .dockerignore  .gitignore  README.md  benchmark.k6.js  docker-compose.metrics.yaml  docker-compose.services.yaml  renovate.json
.github/temp-workflows/: fed-v1-ramping-vus.workflow.yaml
.github/workflows/: benchmark.template.yaml  constant-vus-over-time.template.yaml  constant-vus-over-time.workflow.yaml  decide-runner.template.yaml  docker-bake.template.yaml  fed-v1-constant-vus-over-time.workflow.yaml  fed-v1-constants-vus-subgraphs-delay-resources.yaml  fed-v1-constants-vus-subgraphs-delay.yaml  fed-v1-ramping-vus.workflow.yaml  federation-v1.workflow.yaml  federation-v2.workflow.yaml  images-cleanup.yaml  ramping-vus.workflow.yaml  report.template.yaml  setup.template.yaml
federation-v1/: k6.shared.js
federation-v1/scenarios/: compose-supergraph.ts  k6.shared.js  package.json
federation-v1/subgraphs/: Dockerfile.rust  docker-compose.services.local.yaml  docker-compose.services.yaml  docker-compose.subgraphs.local.yaml  docker-compose.subgraphs.yaml  docker.hcl
federation-v1/subgraphs/reviews/: Cargo.toml  subgraph.rs
federation-v2/scenarios/: k6.shared.js
federation-v2/subgraphs/: docker-compose.subgraphs.local.yaml  docker-compose.subgraphs.yaml  docker.hcl
grafana/dashboards/: dashboard.yaml
grafana/datasources/: datasource.yaml
grafana/json-dashboards/: cadvisor-exporter.json  (+1 more)
mesh/: Dockerfile  docker-compose.yaml  package.json
prometheus/: prometheus.yaml
scenarios/: k6.shared.js
scripts/: images-cleanup.ts
services/: Dockerfile
(+346 files in other folders)
