[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.10"
async-graphql-axum = "6.0.9"
axum = "0.6.20"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "full"] }

[[bin]]
name = "subgraph"
path = "subgraph.rs"
